# simtd

./: LICENSE  README.md  pyproject.toml
examples/: trader_personas.ipynb  trading_simulation.ipynb
news_scraper/: __init__.py  config.py  scraper.py
tests/: __init__.py  test_news_scraper.py  test_simulation_runner.py  test_trading_world.py
trading_simulation/: __init__.py  config.ini  simulation_runner.py  trading_agents.py  trading_world.py
