[tool.poetry]
name = "simtd"
version = "0.1.0"
description = "Trading simulation with agent-based personas integrating FinRL and TinyTroupe"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
finrl = {path = "./FinRL"}
tinytroupe = {path = "./TinyTroupe"}
pandas = "^2.0.0"
numpy = "^1.24.0"
requests = "^2.31.0"
yfinance = "^0.2.28"
stable-baselines3 = "^2.1.0"
torch = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
sphinx = "^7.1.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true